# rockstar

./: .gitignore  README.md  default.nix  festive.cabal  rockstar.cabal
app/: Main.hs  Style.hs
content/: 404.md  about.md
content/js/: scripts.js
content/posts/: 2019-06-02-formula-for-functors.md  2019-06-05-loading-dds-files-in-haskell.md  2020-09-16-kinds.md  _2019-07-04-arrowized-frp.md
