cabal-version: 2.4
name: festive
version: 0.1.0.0
license: BSD-3-Clause
maintainer: riuga@tuta.io
author: Riuga
category: Web
tested-with: 
  GHC == 8.8.1

executable site
  main-is: Main.hs
  other-modules: Style
  hs-source-dirs: app
  default-language: Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    GADTs
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    RecordWildCards
    TemplateHaskell
    TypeApplications
    MultiWayIf
    BlockArguments
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
  build-depends:
    base          >= 4.0 && < 4.14,
    aeson         >= 1.4.7 && < 1.5,
    text          >= 1.2.4 && < 1.3,
    clay          >= 0.13.3 && < 0.14,
    data-default  >= 0.7.1 && < 0.8,
    filepath      >= 1.4.2 && < 1.5,
    lucid         >= 2.9.12 && < 2.10,
    pandoc        >= 2.10.1 && < 2.11,
    rib           >= 0.12.0 && < 0.13,
    shake         >= 0.19.1 && < 0.20,
    with-utf8     >= 1.0.2 && < 1.1,
